--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/rogeriomarques">View on GitHub</a>
-
+ 
           <h1 id="project_title">Rogerio Marques</h1>
           <h2 id="project_tagline"></h2>
 
@@ -27,16 +26,10 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>Welcome to GitHub Pages.</h3>
-
-<p>Soon...</p>
+        <h3>Soon...</h3>
 
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
+
     </div>
 
     
